<resources>
    <string name="app_name">T</string>
    <string name="background_image">description</string>
    <string name="logo">logo</string>
    <string name="get_started">Get Started</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="not">Don\'t have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="user_name">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="click">Click</string>
    <string name="tobe">TODO</string>
    <string name="ok">Okay</string>
    <string name="time_tap">TimeTap</string>
    <string name="streak_0">Streak: 0</string>
    <string name="medal">N</string>
    <string name="points_0">Points: 0</string>
    <string name="timetap">TimeTap</string>
    <string name="o">0</string>
    <string name="streak">Streak</string>
    <string name="points">Points</string>
    <string name="fire">N</string>
    <string name="create_project">Create Project</string>
    <string name="dot">.</string>
    <string name="project_name">Project Name</string>
    <string name="client">Client</string>
    <string name="due_date">Due Date</string>
    <string name="new_project">New Project</string>
    <string name="save">Save</string>
    <string name="start_new_timesheet">Start New Timesheet</string>
    <string name="selected_project_timesheet">Selected Project Timesheet</string>
    <string name="selected_project">Selected Project</string>
    <string name="e_commerce_web_app">E-Commerce Web App</string>
    <string name="task_empty">Task: Empty</string>
    <string name="task_name">Task Name</string>
    <string name="project_title">Project Title</string>
    <string name="task_status">Task Status</string>
    <string name="categories">Categories</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="description">Description</string>
    <string name="cont">continue</string>
    <string name="new_timesheet">New Timesheet</string>
    <string name="photograph">Photograph</string>
    <string name="name">Name</string>
    <string name="add_from_gallery">Add From Gallery</string>
    <string name="use_phone_camera">Use Phone Camera</string>
    <string name="add_photograph">Add Photograph</string>
    <string name="more">More</string>
    <string name="start">start</string>
    <string name="send_link">Please enter your email address and we will send you a link to reset your password.</string>
    <string name="send">Send</string>
    <string name="go_back">Go Back</string>
    <string name="finish">Finish</string>
    <string name="pause">Pause</string>
    <string name="continue_letter">Continue letter</string>
    <string name="restart">restart</string>
    <string name="email_sent_check_inbox">Email sent, Check inbox!</string>
    <string name="account_created">account_created</string>
    <string name="welcome">welcome</string>
    <string name="account_created_successfully_created">account created successfully created</string>
    <string name="next">Next</string>
    <string name="my_profile">My Profile</string>
    <string name="timesheets_list">Timesheets List</string>
    <string name="analytics">Analytics</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="open" />
    <string name="close">close</string>
    <string name="bar_chart">Bar chart</string>
    <string name="graph">Graph</string>
    <string name="select_date_range">Select date range</string>
    <string name="_8h_30min">8h 30min</string>
    <string name="category_name">Category name</string>
    <string name="date_range">Date Range</string>
    <string name="joeblack_email_com">joeblack@email.com</string>
    <string name="pablo">Pablo</string>
    <string name="_7">7</string>
    <string name="total_projects">Total Projects</string>
    <string name="current_streak">Current Streak</string>
    <string name="_8">8</string>
    <string name="_12_5_hrs">12.5 Hrs</string>
    <string name="average_weekly_hours">Average Weekly Hours</string>
    <string name="_1087">1087</string>
    <string name="_400_hrs">400 Hrs</string>
    <string name="all_time_total_hours">All Time Total Hours</string>
    <string name="min_hours_goal">Min Hours Goal</string>
    <string name="_2_hrs">2 Hrs</string>
    <string name="_6_hrs">6 Hrs</string>
    <string name="max_hours_goal">Max Hours Goal</string>
    <string name="next_milestone">Next Milestone</string>
    <string name="continue_later">continue later</string>
    <string name="timesheet_list">timesheet list</string>
    <string name="back">Back</string>
    <string name="client_name">Client Name</string>
    <string name="cal">cal</string>
    <string name="timetape">TimeTape</string>
    <string name="start_new_task">start new task</string>
    <string name="deadline">Deadline</string>
    <string name="start_date">start date</string>
    <string name="timesheets">Timesheets</string>
    <string name="research_and_analysis">Research and Analysis</string>
    <string name="_6h_30min">6h 30min</string>
    <string name="backgroundimage_desc">backgroundimage desc</string>
    <string name="category_hint">Select a Category</string>
    <string name="time_spent">Time Spent:</string>
    <string name="end_time_">End Time:</string>
    <string name="start_time_">Start Time:</string>
    <string name="date_">Date:</string>
    <string name="description_">Description:</string>
    <string name="categories_">Categories:</string>
    <string name="task_name_">Task name:</string>
    <string name="category_name_">Category name</string>
    <string name="enter_new_category">Enter new category</string>
    <string name="finish_task">Finish Task</string>
    <string name="pause_work">Pause Work</string>
    <string name="_00_00_00">00 : 00 : 00</string>

</resources>