<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_myprofile"
            android:icon="@drawable/ic_profile"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/action_category"
            android:icon="@drawable/ic_categories"
            android:title="@string/categories" />

        <item
            android:id="@+id/action_timesheet_list"
            android:icon="@drawable/ic_timesheets"
            android:title="@string/timesheet_list" />

        <item
            android:id="@+id/action_analytics"
            android:icon="@drawable/ic_analytics"
            android:title="@string/analytics" />

        <item
            android:id="@+id/action_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>

    <!-- Divider between each menu item -->
    <item android:title="">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/divider1"
                    android:enabled="false"
                    android:title="" />
            </group>
        </menu>
    </item>
</menu>
