<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backdrop">

        <!-- Back button -->
        <ImageButton
            android:id="@+id/imageBack"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <!-- Title -->
        <TextView
            android:id="@+id/lblAnalytics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="86dp"
            android:layout_marginEnd="111dp"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/new_timesheet"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Scroll view -->
        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="400dp"
            android:layout_height="0dp"
            android:layout_marginTop="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblAnalytics"
            app:layout_constraintVertical_bias="1.0">

            <!-- Frame layout -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/round_corners">

                <!-- Linear layout for input fields -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Project name -->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/project_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtProjectName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/project_name" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <!-- Task name -->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/task_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtTaskName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/task_name" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Start date -->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/start_date">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtStartDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:hint="@string/start_date" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Start time -->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/start_time">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtStartTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:hint="@string/start_time" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- End time -->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/end_time">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtEndTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:hint="@string/end_time" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Photograph switch -->
                    <Switch
                        android:id="@+id/photograph"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/photograph"
                        android:textColor="@color/material_dynamic_neutral60"
                        android:textSize="18sp"
                        android:thumbTint="@color/navy"
                        android:trackTint="@color/navy"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                    <!-- Image Viewer -->
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/imageRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal"
                        tools:listitem="@layout/item_image" />

                    <!-- Categories -->

                    <Spinner
                        android:id="@+id/spinnerCategories"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="16dp"
                        android:spinnerMode="dropdown"
                        tools:ignore="MissingConstraints" />


                    <!-- Description -->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtDescription"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/description"
                            android:textColor="@color/material_dynamic_neutral60" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Continue Button -->
                    <Button
                        android:id="@+id/btnContinue"
                        android:layout_width="match_parent"
                        android:layout_height="51dp"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/round_corners_navy"
                        android:fontFamily="@font/josefin_sans_bold"
                        android:text="@string/cont"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </FrameLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
